[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Сократ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {version = "^2.0.43", extras = ["asyncio"]}
psycopg = {version = "^3.2.9", extras = ["binary", "pool"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
